feat: debounce getUsers
