# src/network/ApiDefinition.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Zextras Carbonio Chats CE Api
   description: Zextras Carbonio Chats CE HTTP APIs definition.
-  version: 0.1.2
+  version: 0.3.0
   contact:
     email: smokybeans@zextras.com
 servers:
@@ -146,7 +146,8 @@ paths:
       operationId: updateRoomPicture
       parameters:
         - $ref: '#/components/parameters/pathRoomId'
-        - $ref: '#/components/parameters/headerXContentDisposition'
+        - $ref: '#/components/parameters/headerFileName'
+        - $ref: '#/components/parameters/headerMimeType'
       requestBody:
         $ref: '#/components/requestBodies/UpdateRoomPictureRequest'
       responses:
@@ -312,6 +313,28 @@ paths:
           $ref: '#/components/responses/404NotFoundResponse'
         403:
           $ref: '#/components/responses/403ForbiddenResponse'
+  /users:
+    get:
+      tags:
+        - Users
+      summary: Retrieves users
+      operationId: getUsers
+      parameters:
+        - $ref: '#/components/parameters/queryUserIds'
+      responses:
+        200:
+          $ref: '#/components/responses/200GetUsersByIdsResponse'
+  /users/capabilities:
+    get:
+      tags:
+        - Users
+      summary: Retrieve current user capabilities
+      operationId: getCapabilities
+      responses:
+        200:
+          $ref: '#/components/responses/200GetCapabilities'
+        401:
+          $ref: '#/components/responses/401UnauthorizedResponse'
   /users/{userId}:
     get:
       tags:
@@ -347,7 +370,8 @@ paths:
       operationId: updateUserPicture
       parameters:
         - $ref: '#/components/parameters/pathUserId'
-        - $ref: '#/components/parameters/headerXContentDisposition'
+        - $ref: '#/components/parameters/headerFileName'
+        - $ref: '#/components/parameters/headerMimeType'
       requestBody:
         $ref: '#/components/requestBodies/UpdateUserPictureRequest'
       responses:
@@ -403,7 +427,11 @@ paths:
       operationId: insertAttachment
       parameters:
         - $ref: '#/components/parameters/pathRoomId'
-        - $ref: '#/components/parameters/headerXContentDisposition'
+        - $ref: '#/components/parameters/headerFileName'
+        - $ref: '#/components/parameters/headerMimeType'
+        - $ref: '#/components/parameters/headerDescription'
+        - $ref: '#/components/parameters/headerMessageId'
+        - $ref: '#/components/parameters/headerReplyId'
       requestBody:
         $ref: '#/components/requestBodies/InsertAttachmentRequest'
       responses:
@@ -411,6 +439,26 @@ paths:
           $ref: '#/components/responses/201InsertAttachmentResponse'
         413:
           $ref: '#/components/responses/413PayloadTooLargeResponse'
+  /rooms/{roomId}/forward:
+    post:
+      tags:
+        - Rooms
+        - Attachments
+      summary: Message forwarding
+      operationId: forwardMessages
+      parameters:
+        - $ref: '#/components/parameters/pathRoomId'
+      requestBody:
+        $ref: '#/components/requestBodies/ForwardMessagesRequest'
+      responses:
+        204:
+          $ref: '#/components/responses/204ForwardMessagesResponse'
+        401:
+          $ref: '#/components/responses/401UnauthorizedResponse'
+        403:
+          $ref: '#/components/responses/403ForbiddenResponse'
+        404:
+          $ref: '#/components/responses/404NotFoundResponse'
   /attachments/{fileId}:
     delete:
       tags:
@@ -519,14 +567,46 @@ components:
         format: uuid
       required: true
       allowEmptyValue: false
-    headerXContentDisposition:
+    headerFileName:
       in: header
-      name: X-Content-Disposition
-      description: file content type and file name writes with inline format ('fileName=<>;mimeType=<>')
+      name: fileName
+      description: file name
       schema:
         type: string
       required: true
       allowEmptyValue: false
+    headerMimeType:
+      in: header
+      name: mimeType
+      description: content type
+      schema:
+        type: string
+      required: true
+      allowEmptyValue: false
+    headerDescription:
+      in: header
+      name: description
+      description: description
+      schema:
+        type: string
+      required: false
+      allowEmptyValue: true
+    headerMessageId:
+      in: header
+      name: messageId
+      description: description
+      schema:
+        type: string
+      required: false
+      allowEmptyValue: true
+    headerReplyId:
+      in: header
+      name: replyId
+      description: identifier of the message being replied to
+      schema:
+        type: string
+      required: false
+      allowEmptyValue: true
     queryPageItemsNumber:
       in: query
       name: itemsNumber
@@ -551,6 +631,16 @@ components:
         items:
           $ref: '#/components/schemas/RoomExtraField'
       required: false
+    queryUserIds:
+      in: query
+      name: userIds
+      description: List of ids (max 10) of the users to retrieve
+      required: true
+      schema:
+        type: array
+        maxItems: 10
+        items:
+          type: string
   requestBodies:
     InsertRoomRequest:
       description: room to insert
@@ -597,6 +687,14 @@ components:
           schema:
             type: string
             format: binary
+    ForwardMessagesRequest:
+      description: Messages forwarding request
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ForwardMessagesList'
+
   responses:
     200HealthStatusResponse:
       description: General status of the service and its dependencies
@@ -687,6 +785,12 @@ components:
       description: The member was promoted
     204DeleteOwnerResponse:
       description: The member was demoted
+    200GetCapabilities:
+      description: User capabilities
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Capabilities'
     200GetUserResponse:
       description: Requested user
       content:
@@ -700,6 +804,14 @@ components:
           schema:
             type: string
             format: binary
+    200GetUsersByIdsResponse:
+      description: The requested users list
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/User'
     204UpdateUserPictureResponse:
       description: User picture was changed correctly
     204DeleteUserPictureResponse:
@@ -754,6 +866,8 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Token'
+    204ForwardMessagesResponse:
+      description: successfully forwarded the messages
     400BadRequestResponse:
       description: The request had wrong or missing parameters
     401UnauthorizedResponse:
@@ -822,6 +936,7 @@ components:
         - previewer_service
         - authentication_service
         - profiling_service
+        - videoserver_service
     Id:
       type: object
       description: Identifier object
@@ -849,6 +964,50 @@ components:
           type: string
           description: hash
       required: [ hash ]
+    Capabilities:
+      type: object
+      properties:
+        canSeeMessageReads:
+          type: boolean
+          description: indicates whether it can see if the messages have been read
+        canSeeUsersPresence:
+          type: boolean
+          description: indicates whether it can see the presence of the other users
+        canVideoCall:
+          type: boolean
+          description: indicates whether it can access video calls
+        canVideoCallRecord:
+          type: boolean
+          description: indicates whether it can record video calls
+        canUseVirtualBackground:
+          type: boolean
+          description: indicates whether it can use a virtual background
+        editMessageTimeLimitInMinutes:
+          type: integer
+          description: limit of minutes within which a message can be edited
+        deleteMessageTimeLimitInMinutes:
+          type: integer
+          description: limit of minutes within which a message can be deleted
+        maxGroupMembers:
+          type: integer
+          description: maximum number of users who can be members of a group
+        maxRoomImageSizeInKb:
+          type: integer
+          description: maximum size for a room image in kB
+        maxUserImageSizeInKb:
+          type: integer
+          description: maximum size for a user image in kB
+      required:
+        - canSeeMessageReads
+        - canSeeUsersPresence
+        - canVideoCall
+        - canVideoCallRecord
+        - canUseVirtualBackground
+        - editMessageTimeLimitInMinutes
+        - deleteMessageTimeLimitInMinutes
+        - maxGroupMembers
+        - maxRoomImageSizeInKb
+        - maxUserImageSizeInKb
     User:
       type: object
       description: User data
@@ -867,11 +1026,13 @@ components:
           type: string
           readOnly: true
           description: user's name
-        lastSeen:
-          type: integer
-          format: int64
+        pictureUpdatedAt:
+          type: string
+          format: date-time
           readOnly: true
-          description: user's last seen timestamp
+          description: |
+            user profile picture update timestamp,
+            returned only if the room picture was set at least once
         statusMessage:
           type: string
           description: the user's status message
@@ -913,6 +1074,7 @@ components:
             type: string
             format: uuid
           description: members identifiers list to be subscribed to the room
+      required: [ type ]
     Room:
       type: object
       description: Room data
@@ -1084,3 +1246,26 @@ components:
         zmToken:
           type: string
           description: ZM token
+    ForwardMessagesList:
+      type: array
+      description: Room data
+      items:
+        $ref: '#/components/schemas/ForwardMessage'
+    ForwardMessage:
+      type: object
+      description: Message to forward
+      properties:
+        originalMessage:
+          type: string
+          readOnly: true
+          description: XML message to forward
+        originalMessageSentAt:
+          type: string
+          format: date-time
+          readOnly: true
+          description: date and time the original message was sent
+        description:
+          type: string
+          readOnly: true
+          description: description of the forwarded message
+      required: [ originalMessage ]
