# src/types/network/apis/IUsersApi.ts
@@ -8,11 +8,13 @@ import {
 	ChangeUserPictureResponse,
 	DeleteUserPictureResponse,
 	GetUserPictureResponse,
-	GetUserResponse
+	GetUserResponse,
+	GetUsersResponse
 } from '../responses/usersResponses';
 
 interface IUsersApi {
-	getUser(userId: string[]): Promise<GetUserResponse>;
+	getUser(userId: string): Promise<GetUserResponse>;
+	getUsers(userId: string[]): Promise<GetUsersResponse>;
 	getURLUserPicture(userId: string): string;
 	getUserPicture(userId: string): Promise<GetUserPictureResponse>;
 	changeUserPicture(userId: string, file: File): Promise<ChangeUserPictureResponse>;
